@@ -14,6 +14,7 @@ Codebase in sync with the KDE3 2.00.0-beta1 release
     ADDED: new synchronizer shortcuts for modifying the synchronizer tasks
     ADDED: credit for Václav in the about box
 
+    FIXED: [ 1506205 ] krviewer crash at urls with non-existing redirection
     FIXED: [ 1854760 ] [ 1516619 ] inconsistent search
     FIXED: [ 1920084 ] kdiff3 is allowed to handle remote URL-s
     FIXED: [ 1638817 ] toolbar loses orientation when modified
